src/pages/SingleStory/SingleStory.css
.single-story-container {
  max-width: 900px;
  margin: 0 auto;
  padding: 20px;
  background-color: #fff;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: #202226 !important;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  /*background-color: #5b5757 !important;*/
  color: white;
}

.content {
  margin-top: 20px;
  color: white;
}

.replyText {
  background-color: #e0e0e0;
  border-radius: 10px;
  padding: 10px;
}

.header img {
  border-radius: 4px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.header img:hover {
  transform: scale(1.01);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.add-comment {
  margin-top: 20px;
  text-align: center;
}

.add-comment-button {
  padding: 10px 20px;
  background-color: #2196f3;
  color: #fff;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.3s ease-in-out;
}

.add-comment-button:hover {
  background-color: #1976d2;
}

.add-comment-button:focus {
  outline: none;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

.modal-content {
  background-color: #4b4848;
  padding: 1px;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  max-width: 1000px;
  width: 100%;
  max-height: 400px;
  overflow: auto;
}

.modal-close-button {
  position: absolute;
  top: 10px;
  right: 10px;
  background: none;
  border: none;
  cursor: pointer;
  font-weight: bolder;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.userName {
  font-weight: 700;
}

.nested-reply {
  margin-left: 40px;
  padding-left: 20px;
  border-left: 1.5px solid #ccc;
}

#threadsh2{
  color: white;
}

.story-img{
  height: auto;
  width: 50%;
}

